<resources>
    <string name="app_name">Formulario</string>
    <string name="button">Button</string>
    <string name="indice_de_masa_corporal_ims">INDICE DE MASA CORPORAL (IMS)</string>
    <string name="kilogramos_kg">Kilogramos (kg)</string>
    <string name="peso">Peso:</string>
    <string name="altura">Altura</string>
    <string name="metros_m">Metros (m)</string>
    <string name="button2">Button</string>
    <string name="imc">IMC:</string>
</resources>